--- a/GMI-angular/src/index.html
+++ b/GMI-angular/src/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>E-Track</title>
-        <link rel="icon" type="image/x-icon" href="favicon.icon">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 
         <!-- Font Family -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
